@@ -1,3 +1,6 @@
+2023-05-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Handle readlink() errors
+
 2023-04-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add another missing lock for tree operations
 
